--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -21,6 +21,9 @@
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qZ8-ND-Snu">
                                 <rect key="frame" x="64" y="269" width="247" height="129"/>
                                 <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="129" id="mja-Wn-Tmj"/>
+                                </constraints>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="0Ga-pz-Aew" appends="YES" id="ZnJ-9J-1CK"/>
                                 </connections>
@@ -51,11 +54,12 @@
                         <constraints>
                             <constraint firstItem="qZ8-ND-Snu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="64" id="4sg-5z-vvZ"/>
                             <constraint firstItem="OSJ-vi-0Ma" firstAttribute="top" secondItem="qZ8-ND-Snu" secondAttribute="bottom" constant="50" id="7EG-eH-9zU"/>
+                            <constraint firstItem="qZ8-ND-Snu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FXr-yw-P6I"/>
                             <constraint firstItem="qZ8-ND-Snu" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="GpR-Tx-gAi"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ez7-hv-nx4" secondAttribute="trailing" constant="56" id="Hh8-Qe-naV"/>
-                            <constraint firstItem="ez7-hv-nx4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="UZ2-Qv-NVc" secondAttribute="trailing" symbolic="YES" id="Izt-kv-OMg"/>
+                            <constraint firstItem="ez7-hv-nx4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="UZ2-Qv-NVc" secondAttribute="trailing" constant="8" symbolic="YES" id="Izt-kv-OMg"/>
+                            <constraint firstItem="qZ8-ND-Snu" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ZuN-35-RIP"/>
                             <constraint firstItem="qZ8-ND-Snu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bCx-Sj-ZSD"/>
-                            <constraint firstItem="qZ8-ND-Snu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="249" id="bps-24-FHD"/>
                             <constraint firstItem="UZ2-Qv-NVc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="isg-Vc-T72"/>
                             <constraint firstItem="OSJ-vi-0Ma" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="91" id="pgL-yn-q6O"/>
                             <constraint firstItem="UZ2-Qv-NVc" firstAttribute="top" secondItem="qZ8-ND-Snu" secondAttribute="bottom" constant="50" id="rhe-BK-va9"/>
@@ -65,7 +69,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="back" destination="UZ2-Qv-NVc" id="Yuw-ch-Dnc"/>
                         <outlet property="imageView" destination="qZ8-ND-Snu" id="Djf-36-42Z"/>
+                        <outlet property="next" destination="OSJ-vi-0Ma" id="fvK-dk-jXb"/>
                         <segue destination="ahG-2n-KbE" kind="show" identifier="Second" id="5Ap-xg-cKl"/>
                     </connections>
                 </viewController>
